--- a/scenarios/baseline.yaml
+++ b/scenarios/baseline.yaml
@@ -1,3 +1,11 @@
 enable_https: no
 enable_ldap: no
 database: postgresql
+keycloak_instances:
+- name: keycloak-server-1
+  cpuset: 1,5
+- name: keycloak-server-2
+  cpuset: 2,6
+keycloak_env:
+  CACHE_OWNERS_COUNT: '2'
+  CACHE_OWNERS_AUTH_SESSIONS_COUNT: '2'
