--- a/scenarios/one-node.yaml
+++ b/scenarios/one-node.yaml
@@ -2,8 +2,6 @@ enable_https: no
 enable_ldap: no
 database: postgresql
 keycloak_instances:
-- name: keycloak-server
+- name: keycloak-server-1
   cpuset: 1,5,2,6
-keycloak_env:
-  CACHE_OWNERS_COUNT: '1'
-  CACHE_OWNERS_AUTH_SESSIONS_COUNT: '1'
+keycloak_env: {}
